crates/anvil-cli/src/tui/layouts/snapshots/anvil__tui__layouts__vertical_split__tests__vertical_split__80x24.snap
---
source: crates/anvil-cli/src/tui/layouts/vertical_split.rs
expression: rendered
---
 ⊢ sessions         DECK: Conversation
 ● main
                    You  do the thing
 ⊢ agents
 │ none active      Anvil  ok

 ⊢ status
 • anthropic
   sonnet-4-6












                    ────────────────────────────────────────────────────────────
                    > next prompt
                    g switch deck │ d tools │ ? help
